Fix letter spacing for title

--- a/DreamEasyApp/static/sass/_members.scss
+++ b/DreamEasyApp/static/sass/_members.scss
@@ -1,7 +1,7 @@
 #members {
-    background-image: url('https://images7.alphacoders.com/593/593108.jpg');
+    background-image: url('http://thatoregonlife.com/wp-content/uploads/2016/09/dallas_oregon_autumn.jpg');
     background-attachment: fixed;
-    background-position: center 50%;
+    background-position: center center;
 
     h1 {
         color: white;
