--- a/DreamEasyApp/static/sass/_mixins.scss
+++ b/DreamEasyApp/static/sass/_mixins.scss
@@ -1,91 +1,70 @@
 @mixin textAnimation() {
     .__container {
-       font-weight: 600;
-       overflow: hidden;
-       // height: 40px;
-       padding: 0px;
+        overflow: hidden;
+        height: 55px;
+        padding: 0;
 
+        .__text {
 
-       .__text {
-         display: inline;
-         float: left;
-         margin: 0;
-       }
+          // line-height:50px;
+          display: inline;
+          // float: left;
+        }
 
-       .__list {
-         margin-top: 0;
-         text-align: left;
-         list-style: none;
+        .__list {
+          margin-bottom: 0;
+          // text-align: right;
+          list-style: none;
 
-         -webkit-animation-name: change;
-         -webkit-animation-duration: 10s;
-         -webkit-animation-iteration-count: infinite;
-         animation-name: change;
-         animation-duration: 10s;
-         animation-iteration-count: infinite;
+          -webkit-animation-name: change;
+          -webkit-animation-duration: 20s;
+          -webkit-animation-iteration-count: infinite;
+          animation-name: change;
+          animation-duration: 20s;
+          animation-iteration-count: infinite;
 
-         .__item {
-           // line-height:40px;
-           margin:0;
-         }
-       }
-     }
+          .__item {
+            line-height:60px;
+            margin:0;
+          }
+        }
+      }
 
-   @-webkit-keyframes opacity {
-     0%, 100% {opacity:0;}
-     50% {opacity:1;}
-   }
+    @-webkit-keyframes change {
+      0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+      16.66%, 29.32% {transform:translate3d(0,-33%,0);}
+      33.32%,45.98% {transform:translate3d(0,-66%,0);}
+      49.98%,62.64% {transform:translate3d(0,-100%,0);}
+      66.64%,79.3% {transform:translate3d(0,-66%,0);}
+      83.3%,95.96% {transform:translate3d(0,-33%,0);}
+    }
 
-   @-webkit-keyframes change {
-     0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-     16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-     33.32%,45.98% {transform:translate3d(0,-50%,0);}
-     49.98%,62.64% {transform:translate3d(0,-75%,0);}
-     66.64%,79.3% {transform:translate3d(0,-50%,0);}
-     83.3%,95.96% {transform:translate3d(0,-25%,0);}
-   }
+    @-o-keyframes change {
+        0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+        16.66%, 29.32% {transform:translate3d(0,-33%,0);}
+        33.32%,45.98% {transform:translate3d(0,-66%,0);}
+        49.98%,62.64% {transform:translate3d(0,-100%,0);}
+        66.64%,79.3% {transform:translate3d(0,-66%,0);}
+        83.3%,95.96% {transform:translate3d(0,-33%,0);}
+    }
 
-   @-o-keyframes opacity {
-     0%, 100% {opacity:0;}
-     50% {opacity:1;}
-   }
+    @-moz-keyframes change {
+        0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+        16.66%, 29.32% {transform:translate3d(0,-33%,0);}
+        33.32%,45.98% {transform:translate3d(0,-66%,0);}
+        49.98%,62.64% {transform:translate3d(0,-100%,0);}
+        66.64%,79.3% {transform:translate3d(0,-66%,0);}
+        83.3%,95.96% {transform:translate3d(0,-33%,0);}
+    }
 
-   @-o-keyframes change {
-       0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-       16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-       33.32%,45.98% {transform:translate3d(0,-50%,0);}
-       49.98%,62.64% {transform:translate3d(0,-75%,0);}
-       66.64%,79.3% {transform:translate3d(0,-50%,0);}
-       83.3%,95.96% {transform:translate3d(0,-25%,0);}
-   }
-
-   @-moz-keyframes opacity {
-     0%, 100% {opacity:0;}
-     50% {opacity:1;}
-   }
-
-   @-moz-keyframes change {
-       0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-       16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-       33.32%,45.98% {transform:translate3d(0,-50%,0);}
-       49.98%,62.64% {transform:translate3d(0,-75%,0);}
-       66.64%,79.3% {transform:translate3d(0,-50%,0);}
-       83.3%,95.96% {transform:translate3d(0,-25%,0);}
-   }
-
-   @keyframes opacity {
-     0%, 100% {opacity:0;}
-     50% {opacity:1;}
-   }
-
-   @keyframes change {
-       0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-       16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-       33.32%,45.98% {transform:translate3d(0,-50%,0);}
-       49.98%,62.64% {transform:translate3d(0,-75%,0);}
-       66.64%,79.3% {transform:translate3d(0,-50%,0);}
-       83.3%,95.96% {transform:translate3d(0,-25%,0);}
-   }
+    @keyframes change {
+        0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+        16.66%, 29.32% {transform:translate3d(0,-100%,0);}
+        33.32%,45.98% {transform:translate3d(0,-200%,0);}
+        49.98%,62.64% {transform:translate3d(0,-300%,0);}
+        66.64%,79.3% {transform:translate3d(0,-200%,0);}
+        83.3%,95.96% {transform:translate3d(0,-100%,0);}
+    }
 }
 
 @mixin rainbow($time) {
