--- a/DreamEasyApp/static/sass/main.scss
+++ b/DreamEasyApp/static/sass/main.scss
@@ -72,6 +72,8 @@ strong {
     }
 
     button {
+        font-size: 1.2em;
+        font-weight: bold !important;
         padding: 0 26px 0 26px;
         background-color: white !important;
     }
@@ -188,7 +190,7 @@ h3 {
     margin-bottom: 5px;
 }
 
-span, p {
+span {
     font-family: "Open Sans", sans-serif;
     line-height: 2;
     font-weight: 400;
